--- a/README
+++ b/README
@@ -5,3 +5,4 @@ Twitter: http://twitter.com/#!/webdevsTweets
 1. Doku / Eclipse - http://www.youtube.com/watch?v=4tfvyIQmWlw
 2. symfony 2 basics / Projekt starten - http://www.youtube.com/watch?v=A1vlx9BmnGk
 3. Projekt / Bundles / Routing - http://www.youtube.com/watch?v=kQyV2tb4Otg
+4. Posts (Twig / Doctrine / Session / Tests) - http://www.youtube.com/watch?v=O7YT-ndofCY
