--- a/README
+++ b/README
@@ -6,3 +6,4 @@ Twitter: http://twitter.com/#!/webdevsTweets
 2. symfony 2 basics / Projekt starten - http://www.youtube.com/watch?v=A1vlx9BmnGk
 3. Projekt / Bundles / Routing - http://www.youtube.com/watch?v=kQyV2tb4Otg
 4. Posts (Twig / Doctrine / Session / Tests) - http://www.youtube.com/watch?v=O7YT-ndofCY
+5. assets / Assetic / Fehlerseiten - http://www.youtube.com/watch?v=ZFUwUa43G1U
