--- a/README
+++ b/README
@@ -7,3 +7,4 @@ Twitter: http://twitter.com/#!/webdevsTweets
 3. Projekt / Bundles / Routing - http://www.youtube.com/watch?v=kQyV2tb4Otg
 4. Posts (Twig / Doctrine / Session / Tests) - http://www.youtube.com/watch?v=O7YT-ndofCY
 5. assets / Assetic / Fehlerseiten - http://www.youtube.com/watch?v=ZFUwUa43G1U
+6. Tags - http://www.youtube.com/watch?v=yCTxjSAxcAI
