--- a/README
+++ b/README
@@ -8,3 +8,4 @@ Twitter: http://twitter.com/#!/webdevsTweets
 4. Posts (Twig / Doctrine / Session / Tests) - http://www.youtube.com/watch?v=O7YT-ndofCY
 5. assets / Assetic / Fehlerseiten - http://www.youtube.com/watch?v=ZFUwUa43G1U
 6. Tags - http://www.youtube.com/watch?v=yCTxjSAxcAI
+7. Security - http://www.youtube.com/watch?v=RkjTEZVTHH0
